--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,4 @@
-spring.application.name=sms-backend
-spring.datasource.url=jdbc:mysql://b1vr2k80xq7tk2ikmnzk-mysql.services.clever-cloud.com/sms
-spring.datasource.username=uwenwrf0riszboid
-spring.datasource.password=uwenwrf0riszboid
+spring.datasource.url=jdbc:mysql://localhost:3306/sms
+spring.datasource.username=root
+spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
