--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.application.name=sms
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/sms
-spring.datasource.username=root
-spring.datasource.password=password
-spring.jpa.hibernate.ddl-auto=update
+# spring.application.name=sms
+# spring.datasource.url=jdbc:mysql://127.0.0.1:3306/sms
+# spring.datasource.username=root
+# spring.datasource.password=password
+# spring.jpa.hibernate.ddl-auto=update
