--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-# spring.application.name=sms
-# spring.datasource.url=jdbc:mysql://127.0.0.1:3306/sms
-# spring.datasource.username=root
-# spring.datasource.password=password
-# spring.jpa.hibernate.ddl-auto=update
+spring.application.name=sms
+spring.datasource.url=jdbc:mysql://viaduct.proxy.rlwy.net:11525/railway
+spring.datasource.username=root
+spring.datasource.password=IhBtiFdCvGbpjmMOMBOmfTCCHILEgATI
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
